feat(fs): created a fs package

--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "affected:libs": "nx affected:libs",
     "affected:lint": "nx affected:lint",
     "affected:test": "nx affected:test",
-    "build": "nx build",
+    "build": "nx run-many --target=build --prod --all",
     "dep-graph": "nx dep-graph",
     "e2e": "nx e2e",
     "format": "nx format:write",
     "format:check": "nx format:check",
     "format:write": "nx format:write",
     "help": "nx help",
-    "lint": "nx workspace-lint && nx lint",
+    "lint": "nx workspace-lint && nx run-many --target=lint --all",
     "nx": "nx",
     "release": "semantic-release",
     "start": "nx serve",
-    "test": "nx test",
+    "test": "nx run-many --target=test --all",
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic"
   },
@@ -39,7 +39,7 @@
     "@semantic-release/npm": "^7.0.6",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "^10.17.42",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
