--- a/libs/fs/package.json
+++ b/libs/fs/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/IKatsuba/rxnode#readme",
   "peerDependencies": {
-    "rxjs": "6.6.3"
+    "rxjs": "6.6.3",
+    "@rxnode/core": "latest"
   }
 }
