--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
-    "prettier": "2.0.4",
+    "prettier": "^2.1.2",
     "rxjs": "6.6.3",
     "semantic-release": "^17.2.1",
     "ts-jest": "26.4.0",
