feat(http): create http package

--- a/.releaserc
+++ b/.releaserc
@@ -20,6 +20,12 @@
         "pkgRoot": "./dist/libs/child-process"
       }
     ],
+    [
+      "@semantic-release/npm",
+      {
+        "pkgRoot": "./dist/libs/http"
+      }
+    ],
     "@semantic-release/github"
   ]
 }
