--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
     "paths": {
       "@rxnode/core": ["libs/core/src/index.ts"],
       "@rxnode/fs": ["libs/fs/src/index.ts"],
-      "@rxnode/child_process": ["libs/child-process/src/index.ts"]
+      "@rxnode/child_process": ["libs/child-process/src/index.ts"],
+      "@rxnode/http": ["libs/http/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
