--- a/nx.json
+++ b/nx.json
@@ -5,6 +5,7 @@
   },
   "implicitDependencies": {
     "workspace.json": "*",
+    "package-lock.json": "*",
     "package.json": {
       "dependencies": "*",
       "devDependencies": "*"
@@ -18,7 +19,8 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
+        "cacheableOperations": ["build", "lint", "test", "e2e"],
+        "cacheDirectory": ".cache"
       }
     }
   },
