--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   "dependencies": {},
   "devDependencies": {
     "@nrwl/cli": "10.3.1",
-    "@nrwl/eslint-plugin-nx": "10.3.1",
-    "@nrwl/jest": "10.3.1",
-    "@nrwl/node": "^10.3.1",
-    "@nrwl/workspace": "10.3.1",
+    "@nrwl/eslint-plugin-nx": "10.4.4",
+    "@nrwl/jest": "10.4.4",
+    "@nrwl/node": "10.4.4",
+    "@nrwl/workspace": "10.4.4",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.1.1",
     "@semantic-release/npm": "^7.0.6",
@@ -46,7 +46,7 @@
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
-    "prettier": "^2.1.2",
+    "prettier": "2.1.2",
     "rxjs": "6.6.3",
     "semantic-release": "^17.2.1",
     "ts-jest": "26.4.0",
