--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,8 @@
       "@rxnode/core": ["libs/core/src/index.ts"],
       "@rxnode/fs": ["libs/fs/src/index.ts"],
       "@rxnode/child_process": ["libs/child-process/src/index.ts"],
-      "@rxnode/http": ["libs/http/src/index.ts"]
+      "@rxnode/http": ["libs/http/src/index.ts"],
+      "@rxnode/crypto": ["libs/crypto/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
