--- a/libs/fs/package.json
+++ b/libs/fs/package.json
@@ -6,7 +6,9 @@
     "rxjs",
     "node",
     "rxnode",
-    "rx-node"
+    "rx-node",
+    "fs",
+    "file system"
   ],
   "author": "Igor Katsuba <katsuba.igor@gmail.com>",
   "description": "fs package for rxnode",
