--- a/package.json
+++ b/package.json
@@ -27,34 +27,34 @@
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic"
   },
-  "dependencies": {},
   "devDependencies": {
     "@ng-builders/semrel": "1.2.0",
-    "@nrwl/cli": "10.3.1",
-    "@nrwl/eslint-plugin-nx": "10.4.4",
-    "@nrwl/jest": "10.4.4",
-    "@nrwl/node": "10.4.4",
-    "@nrwl/workspace": "10.4.4",
+    "@nrwl/cli": "12.3.3",
+    "@nrwl/eslint-plugin-nx": "12.3.3",
+    "@nrwl/jest": "12.3.3",
+    "@nrwl/node": "12.3.3",
+    "@nrwl/nx-cloud": "^12.1.1",
+    "@nrwl/workspace": "12.3.3",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.2",
     "@types/jest": "26.0.23",
-    "@types/node": "^10.17.42",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
+    "@types/node": "^10.17.60",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "bluebird": "^3.7.2",
     "cookie-parser": "^1.4.5",
     "dotenv": "8.2.0",
-    "eslint": "7.26.0",
-    "eslint-config-prettier": "7.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
     "jest": "26.6.3",
-    "prettier": "2.3.0",
+    "prettier": "2.2.1",
     "rxjs": "6.6.7",
     "semantic-release": "^17.4.3",
-    "ts-jest": "26.5.6",
-    "ts-node": "~9.1.1",
-    "tslint": "~6.1.3",
-    "typescript": "~4.0.3"
+    "ts-jest": "26.5.5",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
+    "typescript": "4.1.4"
   }
 }
