--- a/package.json
+++ b/package.json
@@ -25,36 +25,37 @@
     "start": "nx serve",
     "test": "nx run-many --target=test --all",
     "update": "nx migrate latest",
-    "workspace-schematic": "nx workspace-schematic"
+    "workspace-generator": "nx workspace-generator"
   },
   "dependencies": {},
   "devDependencies": {
-    "@ng-builders/semrel": "1.2.0",
-    "@nrwl/cli": "10.3.1",
-    "@nrwl/eslint-plugin-nx": "10.4.4",
-    "@nrwl/jest": "10.4.4",
-    "@nrwl/node": "10.4.4",
-    "@nrwl/workspace": "10.4.4",
+    "@ng-builders/semrel": "1.5.0",
+    "@nrwl/cli": "12.6.3",
+    "@nrwl/eslint-plugin-nx": "12.6.3",
+    "@nrwl/jest": "12.6.3",
+    "@nrwl/node": "12.6.3",
+    "@nrwl/nx-cloud": "^12.3.5",
+    "@nrwl/workspace": "12.6.3",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.2.3",
     "@semantic-release/npm": "^7.1.3",
     "@semantic-release/release-notes-generator": "^9.0.2",
     "@types/jest": "26.0.23",
-    "@types/node": "^10.17.42",
+    "@types/node": "12.20.18",
     "@typescript-eslint/eslint-plugin": "4.26.1",
     "@typescript-eslint/parser": "4.25.0",
     "bluebird": "^3.7.2",
     "cookie-parser": "^1.4.5",
-    "dotenv": "10.0.0",
+    "dotenv": "8.2.0",
     "eslint": "7.26.0",
     "eslint-config-prettier": "7.2.0",
-    "jest": "26.6.3",
-    "prettier": "2.3.0",
+    "jest": "27.0.3",
+    "prettier": "2.3.2",
     "rxjs": "6.6.7",
     "semantic-release": "^17.4.3",
-    "ts-jest": "26.5.6",
-    "ts-node": "~10.0.0",
-    "tslint": "~6.1.3",
-    "typescript": "~4.0.3"
+    "ts-jest": "27.0.3",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
+    "typescript": "4.3.5"
   }
 }
