--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@rxnode/core",
   "version": "0.0.0-stub",
+  "initialVersion": "1.0.0",
   "license": "MIT",
   "keywords": [
     "rxjs",
@@ -22,6 +23,6 @@
   },
   "homepage": "https://github.com/IKatsuba/rxnode#readme",
   "peerDependencies": {
-    "rxjs": "6.6.3"
+    "rxjs": ">= 7.0.0 < 8.0.0"
   }
 }
