--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,27 +1,27 @@
-name: 'release'
+name: 'pvm update'
 
 on:
   push:
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+
+    branches:
+      - 'master'
 
 env:
   PVM_LL: silly
 
+
 jobs:
-  release:
+  update:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 150
+          fetch-depth: 100
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2.1.5
         with:
           node-version: 16.x
       - run: npm ci
       - run: npm run build
-      - run: npm exec pvm publish
+      - run: npm exec pvm update
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
