--- a/package.json
+++ b/package.json
@@ -4,58 +4,44 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "affected": "nx affected",
-    "affected:apps": "nx affected:apps",
-    "affected:build": "nx affected:build",
-    "affected:dep-graph": "nx affected:dep-graph",
-    "affected:e2e": "nx affected:e2e",
-    "affected:libs": "nx affected:libs",
-    "affected:lint": "nx affected:lint",
-    "affected:test": "nx affected:test",
     "build": "nx run-many --target=build --prod --all",
-    "dep-graph": "nx dep-graph",
-    "e2e": "nx e2e",
-    "format": "nx format:write",
-    "format:check": "nx format:check",
-    "format:write": "nx format:write",
-    "help": "nx help",
     "lint": "nx workspace-lint && nx run-many --target=lint --all",
-    "nx": "nx",
-    "release": "nx run-many --target=release --all",
-    "start": "nx serve",
-    "test": "nx run-many --target=test --all",
-    "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator"
+    "release": "echo 0",
+    "test": "nx run-many --target=test --all"
   },
-  "dependencies": {},
+  "workspaces": [
+    "libs/*"
+  ],
   "devDependencies": {
-    "@ng-builders/semrel": "1.5.0",
-    "@nrwl/cli": "12.6.3",
-    "@nrwl/eslint-plugin-nx": "12.6.3",
-    "@nrwl/jest": "12.6.3",
-    "@nrwl/node": "12.6.3",
-    "@nrwl/nx-cloud": "^12.3.5",
-    "@nrwl/workspace": "12.6.3",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/github": "^7.2.3",
-    "@semantic-release/npm": "^7.1.3",
-    "@semantic-release/release-notes-generator": "^9.0.2",
-    "@types/jest": "26.0.23",
-    "@types/node": "12.20.18",
-    "@typescript-eslint/eslint-plugin": "4.26.1",
-    "@typescript-eslint/parser": "4.25.0",
+    "@nrwl/cli": "14.6.4",
+    "@nrwl/eslint-plugin-nx": "14.6.4",
+    "@nrwl/jest": "14.6.4",
+    "@nrwl/js": "14.6.4",
+    "@nrwl/node": "14.6.4",
+    "@nrwl/nx-cloud": "14.6.1",
+    "@nrwl/workspace": "14.6.4",
+    "@pvm/github": "0.55.20",
+    "@pvm/plugin-conventional-changelog": "0.55.20",
+    "@pvm/pvm": "0.55.20",
+    "@types/jest": "28.1.8",
+    "@types/node": "16.11.56",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
     "bluebird": "^3.7.2",
     "cookie-parser": "^1.4.5",
-    "dotenv": "8.2.0",
-    "eslint": "7.26.0",
-    "eslint-config-prettier": "7.2.0",
-    "jest": "27.0.3",
-    "prettier": "2.3.2",
-    "rxjs": "6.6.7",
+    "dotenv": "10.0.0",
+    "eslint": "8.23.0",
+    "eslint-config-prettier": "8.1.0",
+    "fs-extra": "10.1.0",
+    "jest": "28.1.3",
+    "nx": "14.6.4",
+    "prettier": "2.7.1",
+    "rxjs": "7.5.6",
     "semantic-release": "^17.4.3",
-    "ts-jest": "27.0.3",
-    "ts-node": "9.1.1",
+    "ts-jest": "28.0.8",
+    "ts-node": "10.9.1",
+    "tslib": "2.4.0",
     "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "4.7.4"
   }
 }
